# Artaxerxes

./: .envrc  .flake8  .gitignore  .isort.cfg  .travis.yml  Gemfile  Makefile  Pipfile  README  README.md  README.rdoc  Rakefile  manage.py  pyproject.toml
app/controllers/: application_controller.rb  dashboard_controller.rb  events_controller.rb  registrations_controller.rb  series_controller.rb  users_controller.rb
app/helpers/: application_helper.rb
app/models/: emergency_contact.rb  event.rb  medical_detail.rb  registration.rb  series.rb  user.rb  user_address.rb
apps/core/: admin.py  fields.py  forms.py  urls.py  utils.py  views.py
apps/events/: admin.py  adminviews.py  forms.py  urls.py  views.py
apps/payments/: admin.py  apps.py  services.py  urls.py  views.py
apps/people/: admin.py  adminviews.py  apps.py  urls.py  views.py
apps/registrations/: admin.py  apps.py  forms.py  services.py  urls.py  views.py
arta/: testrunner.py  urls.py  wsgi.py
arta/common/: admin.py  db.py  log.py  middleware.py  views.py
arta/settings/: common.py  development.py  production.py
config/: application.rb  database.yml  environment.rb  routes.rb
config/environments/: development.rb  production.rb  test.rb
config/initializers/: secret_token.rb  session_store.rb
config/locales/: en.yml  nl.yml  rails.nl.yml
db/: schema.rb
db/migrate/: 20130928162535_create_series.rb  20130928164823_create_events.rb  20130928195340_create_user_addresses.rb  20130928200549_create_users.rb  20130928201830_create_emergency_contacts.rb  20130928202406_create_medical_details.rb  20130929090441_add_remember_address_to_users.rb  20130929090616_create_registrations.rb  20130929090627_add_remember_emergency_contacts_to_users.rb  20130929111315_rename_medical_details_type_to_kind.rb  20131031194455_add_indices.rb
fixtures/: default.yaml  dev-site.yaml
scenarios/: logging_in.feature
spec/config/: locales_spec.rb
spec/controllers/: registrations_controller_spec.rb
templates/: base.html
(+268 files in other folders)
